# Tutorials:
add_executable(accessor             accessor.cpp)
ADD_EXECUTABLE(algorithms           algorithms.cpp)
add_executable(coboundary_iteration coboundary_iteration.cpp)
ADD_EXECUTABLE(mesh_setup           mesh_setup.cpp)
add_executable(element_erase        element_erase.cpp)
ADD_EXECUTABLE(finite_volumes       finite_volumes.cpp)
ADD_EXECUTABLE(io                   io.cpp)
ADD_EXECUTABLE(iterators            iterators.cpp)
ADD_EXECUTABLE(multi_segment        multi_segment.cpp)
add_executable(neighbor_iteration   neighbor_iteration.cpp)
add_executable(polygon              polygon.cpp)
add_executable(segments             segments.cpp)
add_executable(interface            interface.cpp)
add_executable(read_plc             read_plc.cpp)
add_executable(dump_info            dump_info.cpp)
add_executable(vmesh_creator        vmesh_creator.cpp)
add_executable(copy_elements        copy_elements.cpp)
add_executable(thin_mesh            thin_mesh.cpp)




# Old (TODO cleanup, merge to tests)
#add_executable(collection_test              old/collection_test.cpp)
#add_executable(container_collection_test_2  old/container_collection_test_2.cpp)
#add_executable(container_test               old/container_test.cpp)
#add_executable(copy_mesh_test             old/copy_mesh_test.cpp)
#add_executable(element_test_3               old/element_test_3.cpp)
#add_executable(element_test_4               old/element_test_4.cpp)
#add_executable(element_erase_refine_test    old/element_erase_refine_test.cpp)
#add_executable(mesh_test                  old/mesh_test.cpp)
#add_executable(mesh_test_2                old/mesh_test_2.cpp)
#add_executable(mesh_test_3                old/mesh_test_3.cpp)
#add_executable(mesh_test_4                old/mesh_test_4.cpp)
#add_executable(mesh_test_5                old/mesh_test_5.cpp)
#add_executable(trigate_read_test            old/trigate_read_test.cpp)
#add_executable(plc_test                     old/plc_test.cpp)
#add_executable(plc_reader_test              old/plc_reader_test.cpp)
#add_executable(handle_test                  old/handle_test.cpp)
#if (ENABLE_VIENNADATA)
#  add_executable(accessor_test              old/accessor_test.cpp)
#endif()
#add_executable(coboundary_iteration_with_segments     old/coboundary_iteration_with_segments.cpp)
# ADD_EXECUTABLE(slim_mesh                  old/slim_mesh.cpp)
# ADD_EXECUTABLE(store_access_data            old/store_access_data.cpp)
#add_executable(vtk_reader                   old/vtk_reader.cpp)
#add_executable(vtk_writer                   old/vtk_writer.cpp)
#add_executable(point                        old/point.cpp)
